# homework_07

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
hw_app/: .env.template  add_mok_data.py  api_calls.py  config.py  db_calls.py  entrypoint.sh  jsonplaceholder_requests.py  main.py
hw_app/alembic/: env.py
hw_app/alembic/versions/: 2025_06_17_1519-e4eebffcadf2_create_user_table.py
hw_app/api/: __init__.py
hw_app/api/user/: view.py
hw_app/models/: db.py  post.py  user.py
hw_app/templates/: base.html  index.html  user.html  user_by_id_form.html  user_create.html  user_get.html
