[project]
name = "hw-07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "unicorn>=2.1.3",
]
